combination test WIP

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
 <body>
     <div>
         <nav>
-            <a href="/mastermind/rule">Game Rule</a> |
-            <a href="/mastermind/play">Play</a> |
+            <a href="/rule">Game Rule</a> |
+            <a href="/play">Play</a> |
         </nav>
     </div>
     <div>
