--- a/templates/error.html
+++ b/templates/error.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <h1>Error</h1>
-<p>{{ errorMessage}}</p>
+<p>{{ err.status }}</p>
+<p>Sorry, your request is not valid!</p>
 
 {% endblock %}
