--- a/templates/play.html
+++ b/templates/play.html
@@ -17,7 +17,7 @@
       <button>Submit My Guess!</button>
 </form>
 <div>
-{{ answer }}
+{{ combination }}
 </div>
 <div id="result">
     <!-- <p>{{ game.feedbacks }}</p>
