--- a/templates/play.html
+++ b/templates/play.html
@@ -3,8 +3,42 @@
 
 <h1>Mastermind</h1>
 <form>
-    <label for="first-choice">Choose first digit</label>
-    <select id="first-choice" name="first">
+    <div>
+        <label for="num-digits">Choose how many digits you want to guess against:</label>
+        <select id="num-digits" name="num-digits">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+        </select>
+    </div>
+
+    <div>
+        <label for="num-guess">Choose how many guesses you wish</label>
+        <select id="num-guess" name="num-guess">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+        </select>
+    </div>
+    <button id="start-game">Start Game!</button>
+ </form>
+
+    <!-- <label for="first_choice">Choose first digit</label>
+    <select id="first_choice" name="first">
         <option value="0">0</option>
         <option value="1">1</option>
         <option value="2">2</option>
@@ -14,10 +48,13 @@
         <option value="6">6</option>
         <option value="7">7</option>
     </select>
-      <button>Submit My Guess!</button>
-</form>
+      <button>Submit My Guess!</button> -->
+
+<div id="user-guess">
+
+</div>
 <div>
-{{ combination }}
+    {{ combination }}
 </div>
 <div id="result">
     <!-- <p>{{ game.feedbacks }}</p>
