--- a/templates/play.html
+++ b/templates/play.html
@@ -2,10 +2,10 @@
 {% block content %}
 
 <h1>Mastermind</h1>
-<form>
-    <div>
-        <label for="num-digits">Choose how many digits you want to guess against:</label>
-        <select id="num-digits" name="num-digits">
+<!-- <form id="game-info-request">
+    <div id="digits-session">
+        <label for="num-digits-request">Choose how many digits you want to guess against:</label>
+        <select id="num-digits-request" name="num-digits-request">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -19,9 +19,9 @@
         </select>
     </div>
 
-    <div>
-        <label for="num-guess">Choose how many guesses you wish</label>
-        <select id="num-guess" name="num-guess">
+    <div id="attempts-session">
+        <label for="num-attempts-request">Choose how many guesses you wish</label>
+        <select id="num-attempts-request" name="num-attempts-request">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -35,7 +35,7 @@
         </select>
     </div>
     <button id="start-game">Start Game!</button>
- </form>
+ </form> -->
 
     <!-- <label for="first_choice">Choose first digit</label>
     <select id="first_choice" name="first">
@@ -51,14 +51,23 @@
       <button>Submit My Guess!</button> -->
 
 <div id="user-guess">
-
+    <select id="first_choice" name="first">
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+    </select>
+    <button>Submit My Guess!</button>
 </div>
 <div>
     {{ combination }}
 </div>
 <div id="result">
-    <!-- <p>{{ game.feedbacks }}</p>
-    <p>{{ game.attempts }}</p> -->
+
 </div>
 
 {% endblock %}
