--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,20 +10,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/mastermind.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     {% block script %}{% endblock %}
 </head>
+
 <body>
     <div>
-        <nav>
-            <a href="/rule">Game Rule</a> |
-            <a href="/play">Play</a> |
+        <nav class="navbar">
+            <div class="container">
+                <a class="nav-link" href="/rule">Game Rule</a>
+                <a class="nav-link" href="/play">Play</a>
+            </div>
         </nav>
     </div>
-    <div>
-        {% block content %}{% endblock %}
+    {% block content %}{% endblock %}
     </div>
 
 </body>
+
 </html>
