--- a/static/css/mastermind.css
+++ b/static/css/mastermind.css
@@ -5,6 +5,7 @@
 
 nav {
     display: -webkit-box;
+    margin-bottom: 3em;
 }
 
 body {
@@ -18,9 +19,11 @@ h1 {
 
 #mm-config {
     text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
-#mm-btn-start #mm-replay #mm-play {
+#mm-start #mm-replay #mm-play {
     margin-top: 5em;
     text-align: center;
     padding-top: 3em;
