fixed database tests

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,10 @@
         </div>
     </nav>
 
+    <div class="container" id="error-message">
+
+    </div>
+
     {% block content %}{% endblock %}
     </div>
 
