--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,26 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Login
+{% endblock %}
+
+{% block script %}
+<script src="/js/login.js"></script>
+{% endblock %}
 {% block content %}
 
 <h1>Login</h1>
 <form>
     <div class="container">
         <div class="form-group mb-4">
-            <label class="form-label" for="username">Username</label>
-            <input type="username" id="username" class="form-control" />
+            <label class="form-label" for="username-login">Username</label>
+            <input type="username" id="username-login" class="form-control" />
         </div>
         <div class="form-group mb-4">
-            <label class="form-label" for="password">Password</label>
-            <input type="password" id="password" class="form-control" />
+            <label class="form-label" for="password-login">Password</label>
+            <input type="password" id="password-login" class="form-control" />
         </div>
-        <button type="button" class="btn btn-primary btn-block mb-4">Sign in!</button>
+        <button type="button" class="btn btn-primary btn-block mb-4" id="mm-btn-login">Sign in!</button>
     </div>
 </form>
 
