--- a/templates/register.html
+++ b/templates/register.html
@@ -4,22 +4,26 @@
 Register new user
 {% endblock %}
 
+{% block script %}
+<script src="/js/register.js"></script>
+{% endblock %}
+
 {% block content %}
 <div class="container">
 
-    <h1>Register new user </h1>
+    <h1>Register A New Account</h1>
 
     <form>
         <div class="container">
             <div class="form-group mb-4">
-                <label class="form-label" for="username">Username</label>
-                <input type="username" id="username" class="form-control" />
+                <label class="form-label" for="username-reg">Username</label>
+                <input type="username" id="username-reg" class="form-control" name="username-reg" />
             </div>
             <div class="form-group mb-4">
-                <label class="form-label" for="password">Password</label>
-                <input type="password" id="password" class="form-control" />
+                <label class="form-label" for="password-reg">Password</label>
+                <input type="password" id="password-reg" class="form-control" name="password-reg"/>
             </div>
-            <button type="button" class="btn btn-primary btn-block mb-4">Register</button>
+            <button type="button" class="btn btn-primary btn-block mb-4" id="mm-btn-register">Register</button>
         </div>
     </form>
 
