--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/mastermind.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/js/auth.js"></script>
     {% block script %}{% endblock %}
 </head>
 
@@ -21,26 +22,30 @@
             <div class="navbar-collapse collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/rule">Game Rule |</a>
+                        <a class="nav-link active" href="/rule">Game Rule | </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/play">Play |</a>
+                        <a class="nav-link active" href="/play">Play | </a>
                     </li>
                     <!-- If user login  -->
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Logout |</a>
+                        <a class="nav-link active" href="/rule" id="nav-logout" style="display: none;">Logout | </a>
                     </li>
                     <!-- If user logout -->
                     <li class="nav-item">
-                        <a class="nav-link active" href="/login">Login |</a>
+                        <a class="nav-link active" href="/login" id="nav-login">Login | </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/register">Sign Up |</a>
+                        <a class="nav-link active" href="/register" id="nav-register">Sign Up | </a>
+                    </li>
+                    <li class="nav-item">
+                        <p class="nav-link active" id="nav-username" style="display: none;"></p>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
 
     <div class="container" id="error-message">
 
