--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/play">Play | </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/top_users">Top Users |</p>
+                    </li>
                     <!-- If user login  -->
                     <li class="nav-item">
                         <a class="nav-link active" href="/rule" id="nav-logout" style="display: none;">Logout | </a>
@@ -45,7 +48,6 @@
             </div>
         </div>
     </nav>
-
 
     <div class="container" id="error-message">
 
