--- a/templates/play.html
+++ b/templates/play.html
@@ -48,7 +48,7 @@
 
 <div class="container">
     <div id="mm-replay">
-        <button class="btn btn-primary" id="mm-btn-replay"><a href="/play">Replay</a></button>
+        <button type="button" class="btn btn-primary" id="mm-btn-replay"><a href="/play">Replay</a></button>
     </div>
     <div class="container" id="combination-result"></div>
     <div class="container" id="mastermind"></div>
