--- a/templates/base.html
+++ b/templates/base.html
@@ -20,28 +20,28 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="navbar-collapse collapse">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/rule">Game Rule | </a>
+                        <a class="nav-link active" href="/rule">Game Rule</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/play">Play | </a>
+                        <a class="nav-link active" href="/play">Play</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/top_users">Top Users |</p>
+                        <a class="nav-link active" href="/top_users">Top Users</a>
                     </li>
                     <!-- If user login  -->
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/rule" id="nav-logout" style="display: none;">Logout | </a>
+                    <li class="nav-item ml-auto">
+                        <a class="nav-link active" href="/rule" id="nav-logout" style="display: none;">Logout</a>
                     </li>
                     <!-- If user logout -->
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/login" id="nav-login">Login | </a>
+                    <li class="nav-item ml-auto">
+                        <a class="nav-link active" href="/login" id="nav-login">Login</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/register" id="nav-register">Sign Up | </a>
+                    <li class="nav-item ml-auto">
+                        <a class="nav-link active" href="/register" id="nav-register">Sign Up</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ml-auto">
                         <p class="nav-link active" id="nav-username" style="display: none;"></p>
                     </li>
                 </ul>
