--- a/templates/game_rule.html
+++ b/templates/game_rule.html
@@ -8,11 +8,11 @@
         <li>You must enter full combination that you guess.</li>
         <li>At each attempts, you will be provided feedback whether you had guess a number correctly, and/or a number and digit correctly.</li>
         <li>You must guess the right number combinations within the number of requested attempts to win the game.</li>
-        <li>Duplicate are allowed.</li>
+        <li>Duplicate numbers are allowed.</li>
     </ul>
 
     <div id="mm-play">
-        <button class="btn btn-primary" id="mm-btn-play"><a href="/play">Play Game!</a></button>
+        <button type="button" class="btn btn-primary" id="mm-btn-play"><a href="/play">Play Game!</a></button>
     </div>
 </div>
 
