--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/rule">Game Rule</a>
+                        <a class="nav-link active" href="/rule">Game Rules</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/play">Play</a>
@@ -31,20 +31,20 @@
                         <a class="nav-link active" href="/top_users">Top Users</a>
                     </li>
                     <!-- If user login  -->
-                    <li class="nav-item ml-auto">
+                    <li class="nav-item">
                         <a class="nav-link active" href="/rule" id="nav-logout" style="display: none;">Logout</a>
                     </li>
                     <!-- If user logout -->
-                    <li class="nav-item ml-auto">
+                    <li class="nav-item">
                         <a class="nav-link active" href="/login" id="nav-login">Login</a>
                     </li>
-                    <li class="nav-item ml-auto">
+                    <li class="nav-item">
                         <a class="nav-link active" href="/register" id="nav-register">Sign Up</a>
                     </li>
-                    <li class="nav-item ml-auto">
-                        <p class="nav-link active" id="nav-username" style="display: none;"></p>
-                    </li>
                 </ul>
+            </div>
+            <div class="d-flex justify-content-end">
+                <span class="navbar-brand mb-0 h1" id="nav-username" style="display: none;"></span>
             </div>
         </div>
     </nav>
