--- a/templates/rule.html
+++ b/templates/rule.html
@@ -8,7 +8,7 @@
         <li>You must enter full combination that you guess.</li>
         <li>At each attempts, you will be provided feedback whether you had guess a number correctly, and/or a number and digit correctly.</li>
         <li>You must guess the right number combinations within the number of requested attempts to win the game.</li>
-        <li>Duplicate numbers are allowed.</li>
+        <li>Duplicate numbers are allowed in the combination.</li>
     </ul>
 
     <div class="col text-center" id="mm-play">
